export interface Moderator {
  ethereumAddress: string;
}
