export interface Reviewer {
  ethereumAddress: string;
}
